--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </tr>
     <tr>
         <td class="header-side"><h7>Program/s Applied for:</h7></td>
-        <td>Master of Arts in Education major in English</td>
+        <td><a href="">Master of Arts in Education major in English</a></td>
         <td style="width: 400px;">
             <div style="display: flex;">
                 <div style="flex: 1; border: 1px solid black; padding: 5px; margin-top: -17px;margin-bottom: -17px;border-left:none; border-bottom:none; margin-left: -10px;margin-bottom:-15px; background-color: lightblue; font-weight: bold; color: #020202;">Date of Evaluation:</div>
