--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </tr>
     <tr>
         <td class="header-side"><h7>Program/s Applied for:</h7></td>
-        <td><a href="">Master of Arts in Education major in English</a></td>
+        <td>Master of Arts in Education major in English</td>
         <td style="width: 400px;">
             <div style="display: flex;">
                 <div style="flex: 1; border: 1px solid black; padding: 5px; margin-top: -17px;margin-bottom: -17px;border-left:none; border-bottom:none; margin-left: -10px;margin-bottom:-15px; background-color: lightblue; font-weight: bold; color: #020202;">Date of Evaluation:</div>
@@ -135,54 +135,116 @@
     </thead>
     <tbody>
         <tr>
-            <td rowspan="4" class="text">waahahahahh</td>
-            <td>H</td>
-            <td>I</td>
-            <td>J</td>
-            <td>K</td>
-            <td>L</td>
-            <td>M</td>
+            <td rowspan="4" class="text">I. ELIGIBILITY</td>
+            <td class="text-body">Private HEIs, SUCs, and LUCs with CHED 
+                Institutional Recognition shall meet any of the 
+                following conditions: </td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-            <td>H</td>
-            <td>I</td>
-            <td>J</td>
-            <td>K</td>
-            <td>L</td>
-            <td>M</td>
-        </tr>
-                <tr>
-            <td>H</td>
-            <td>I</td>
-            <td>J</td>
-            <td>K</td>
-            <td>L</td>
-            <td>M</td>
+            <td class="text-body">•  With Center of Excellence (COE) or 
+                Center of Development (COD) status in 
+                the discipline being applied, OR </td>
+            <td><a href="http://localhost/curriculum/index.html">CMO or Certificate of Designation as COE/COD</a></td>
+            <td>The Negros Oriental State 
+                University has been granted 
+                Center of Development in Teacher 
+                Education by the Commission on 
+                Higher Education (CHED).</td>
+            <td></td>
+            <td></td>
+            <td>The College of Education, over the years, continuously upholds its aim to become the leading center of development for teacher education program in the Visayas and Mindanao</td>
         </tr>
         <tr>
-            <td>H</td>
-            <td>I</td>
-            <td>J</td>
-            <td>K</td>
-            <td>L</td>
-            <td>M</td>
+            <td class="text-body">• With international accreditation in the 
+                corresponding undergraduate program, 
+                OR </td>
+            <td><a href="">Certificate of Accreditation</a></td>
+            <td>It is AACCUP that accredits its undergraduate program</td>
+            <td>Complied</td>
+            <td></td>
+            <td>To strengthen delivery of programs, NORSU has implemented an ISO 9001:2015 since 2019. As certified in the 2nd Cycle, the university Quality Management System (QMS) is applied to all campuses. One of the QMS scopes covers the Delivery of Educational Services for Higher Education Training in Pre-Baccalaureate and Baccalaureate Degree Programs. NORSU has encouraged all relevant offices and colleges to enroll their processes in the SOURCE-Input-Procedure-Output Customer risk analyses template. This directory serves as the foundation for both internal and external audits, ensuring that the QMS aligns with the ISO 9001:2015 standard. With the application of ISO standard processes, quality delivery of NORSU academic programs is ensured.  </td>
         </tr>
         <tr>
-            <td rowspan="2" class="text">II.</td>
-            <td>H</td>
-            <td>I</td>
-            <td>J</td>
-            <td>K</td>
-            <td>L</td>
-            <td>M</td>
+            <td class="text-body">• With at least Level III program 
+                accreditation or   equivalent from CHED 
+                recognized accrediting agency in the 
+                corresponding undergraduate degree 
+                program. </td>
+            <td><a href="">Certificate of Accreditation</a></td>
+            <td>BSEd major in English is AACCUP Level III accredited undergraduate program</td>
+            <td>Complied</td>
+            <td></td>
+            <td>The feeder program is Level III AACCUP accredited.</td>
         </tr>
         <tr>
-            <td>H</td>
-            <td>I</td>
-            <td>J</td>
-            <td>K</td>
-            <td>L</td>
-            <td>M</td>
+            <td rowspan="2" class="text">II.	PROGRAM LEVELS, TYPES ANDOUTCOMES</td>
+            <td class="text-body"><span class="haha">Section 6. Program Levels and Outcomes (For Master’s Program)</span><br>Master’s programs are aligned with Level 7 of PQF. (please refer to AREA V of the Instrument: OBE Requirement - Section 15-2: OBE Graduate Program Design)</td>
+            <td><a href="">Refer to AREA V</a></td>
+            <td>Refer to AREA V</td>
+            <td>Complied</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class="text-body"><span class="haha">Section 7. Types of Graduate Program</span><br>Program offering or program being proposed must be aligned with the type of master’s programs specified in Section 7-III of CMO 15, s. 2019</td>
+            <td><a href="http://localhost/curriculum/index.html">Program Description</a></td>
+            <td>The program follows the thesis academic track with twenty-four (24) units of coursework having at least six (6) units of thesis.</td>
+            <td>Complied</td>
+            <td></td>
+            <td>Migrating from MA English to MAEd major in English, the program underwent series of curriculum reviews to align it to the requirements of CMO 15, series of 2019.</td>
+        </tr>
+        <tr>
+            <td rowspan="3" style="text-align: right; margin-right: 8px;">MAJOR REQUIREMENT AND STUDENT OUTPUT</td>
+            <td class="text-body"><span class="haha">Section 8. Major Requirement and Student Output</span></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class="text-body"><span class="haha">Section 8.A-1: For MA (Academic Track)</span><br>•	Passing of comprehensive examination <br>
+                •	Thesis <br>
+                •	At least 1 Publication in refereed journal or juried creative work <br>
+                <span class="haha">Section 8.A-2: MA (Research Track)</span><br>•	Passing a comprehensive Exam
+                <br>•	At least 1 publication in refereed journal or juried creative work
+                </td>
+            <td><a href="">Graduate School Manual</a><br><br><a href=""> Admission Policy</a></td>
+            <td>Students passing the comprehensive examination has always been practiced</td>
+            <td></td>
+            <td></td>
+            <td>Revised Curriculum</td>
+        </tr>
+        <tr>
+            <td class="text-body"><span class="haha">Section 9. Publication Requirement for Graduate Studies</span><br>Students in the MS/MA Academic and Research Tracks are required to have publication in refereed journal or juried creative work</td>
+            <td><a href="">Graduate School Manual</a><br><br><a href=""> Admission Policy</a></td>
+            <td>The said requirement(s) for MA graduates are stipulated in the Graduate Program Manual of Operation.</td>
+            <td></td>
+            <td></td>
+            <td>Revised Curriculum</td>
+        </tr>
+        <tr>
+            <td rowspan="2" class="text">III. CURRICULUM</td>
+            <td class="text-body"><span class="haha">Section 11. Curricular and Developmental Initiatives</spaan></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class="text-body"><span class="haha">Section 8. A-1: For MA (Academic Track)</span><br>With at least 24 units of coursework and at least 6 units of Thesis <br><br><br><span class="haha">Section 8.A.2: For MA (Research Track)</span><br>With at least 36 units coursework-units wherein there is less coursework and more research activities <br> <br>All units to be taken is by coursework (no coursework) </td>
+            <td><a href="">Curriculum Outline</a> <br><br><br><br><br><br> and <br><br><br><br><br><br> <a href="">Course Description</a><br><br><br><br><br><br><br><br><a href="">Sample Program of the Study</a></td>
+            <td>Migrating into MAEd major in English, the new curriculum now has 6 units basic courses, 12 units major courses, 6 units cognate/elective courses, and 6 units thesis writing of which it has a total of 30 units for students to graduate from the program. <br><br><br><br><br>Each course description follows the COBEdized  format of stating the course content and it clearly describes the knowledge and skills students have to learn in order to address real-world English language teaching issues and problems related to English as a second/foreign language and as an international language. <br><br><br><br>Program of Study is part of advising and monitoring students’ progress in the degree they are taking.</td>
+            <td>Complied <br><br><br><br><br><br><br><br><br><br><br>Complied<br><br><br><br><br><br><br><br><br><br><br><br>Complied</td>
+            <td></td>
+            <td>The new nomenclature of the curriculum follows the stipulation specified in Section 7-III of CMO 15, series of 2019. <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>The Program of Study ensures that students are well-advised and monitored to keep track of their academic progress. 
+                </td>
         </tr>
     </tbody>
 </table>
@@ -321,6 +383,7 @@ tbody .text{
     text-align: left;        /* Aligns text to the left horizontally */
     vertical-align: top;     /* Aligns text to the top vertically */
     padding: 5px 10px;  
+    font-weight: bold;
 }
 /* Column Width Adjustments for .second-table */
 .second-table .col-1 {
@@ -363,13 +426,23 @@ body {
 
 .text-content {
     text-align: left; /* Align text to the left */
+
 }
 
 .table-title {
     margin: 0; /* Remove default margin */
 }
-
-
+.text-body{
+    text-align: left;
+    padding: 5px 10px;
+}
+.haha{
+    font-weight: bold;
+    color: #020202;
+}
+tbody{
+    vertical-align: top; 
+}
 </style>
 
 </html>
