--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         </tr>
         <tr>
             <td class="text-body"><span>4.  </span><span class="haha">Ethical Standards - </span>The HEI maintains ethical standards to be observed by faculty and students when they conduct research/thesis/dissertation involving human participation or animal subjects. The HEI may adopt ethical standards developed by the appropriate agencies such as DOST.</td>
-            <td><a href="https://drive.google.com/file/d/1SH1MkHJpvPI7mltIrsjb2TnRJJvh73-q/view?usp=sharing">Policy on Ethical Standards</a><br><br><a href="https://drive.google.com/file/d/1SH1MkHJpvPI7mltIrsjb2TnRJJvh73-q/view?usp=sharing">RCW Polices/Manual</a></td>
+            <td><a href="https://drive.google.com/file/d/1SH1MkHJpvPI7mltIrsjb2TnRJJvh73-q/view?usp=sharing">Policy on Ethical Standards</a><br><br><a href="https://drive.google.com/file/d/1SH1MkHJpvPI7mltIrsjb2TnRJJvh73-q/view?usp=sharing">RCW Policies/Manual</a></td>
             <td>The university adheres to the highest policies on ethical standards in the conduct of all its researches as their very norm promotes the aims of research, such as knowledge, truth, and avoidance of error. The said policies are found in the university’s Research Code of Ethics. </td>
             <td>Compiled</td>
             <td></td>
