--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </tr>
         <tr>
             <td class="text-body"><span>2.  </span><span class="haha">RCW Policies - </span>The HEI has policies and guidelines on benefits and incentives for faculty undertaking research or creative work, such as de-loading, research awards, and support for publications and other scholarly or creative works, among others. These policies should be reflected in the Graduate Program Manual of Operations (GPMO)</td>
-            <td><a href="https://drive.google.com/file/d/1p32ecj2Q2YCuLFo57Wik_bOB5H4Bb9cs/view?usp=sharing">RCW Policies/Manual</a></td>
+            <td><a href="https://drive.google.com/file/d/1kSedngJf1ePY-xYPdPkU1PilJWNyZNHr/view?usp=drive_link">RCW Policies/Manual</a></td>
             <td>Anchored on the University Code, the Graduate Program Manual of Operations (GPMO) stipulates policies and guidelines regarding benefits and incentives faculty members get when undertaking research or creative work.</td>
             <td>Compiled</td>
             <td></td>
@@ -514,7 +514,7 @@
                 d.	Thesis defense panel shall have at least three (3) members while the dissertation panel shall have at least five (5), the members of which include content and method specialist<br><br><br>
                 
             </td>
-            <td><a href="https://drive.google.com/file/d/1bg3L3Ppdox7I33kzHaUCz8swzbJy-vqz/view?usp=sharing">GMPO/RCW Manual/Policies</a></td>
+            <td><a href="https://drive.google.com/file/d/1kSedngJf1ePY-xYPdPkU1PilJWNyZNHr/view?usp=drive_link">GMPO/RCW Manual/Policies</a></td>
             <td>The present panel composition in the Graduate School contains content and method specialists. <br><br><br>
                 The Dean in coordination with the members of the panel sees to it that the thesis/dissertation adviser has the needed qualification.<br><br><br>
                 The Graduate School has pool of experts serving as method specialists.<br><br><br>
