--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <td>Anchored on the University Code, the Graduate Program Manual of Operations (GPMO) stipulates policies and guidelines regarding benefits and incentives faculty members get when undertaking research or creative work.</td>
             <td>Compiled</td>
             <td></td>
-            <td>Faculty members who have approved research or creative work are given the privilege of course reloading as a necessary support for them to actively engage in research/creative work. Additionally, the university allocates funding when faculty members travel for paper presentations as a form of research dissemination</td>
+            <td>Faculty members who have approved research or creative work are given the privilege of course deloading as a necessary support for them to actively engage in research/creative work. Additionally, the university allocates funding when faculty members travel for paper presentations as a form of research dissemination</td>
         </tr>
         <tr>
             <td class="text-body"><span>3.  </span><span class="haha">RCW Agenda - </span>The HEI has clearly stated research and creative work agenda that includes the discipline being applied for. The agenda has to be: <br><br>a.	anchored on the institution’s philosophy and framework <br><br>
