--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         </tr>
         <tr>
             <td class="text-body">a.	holder of a doctoral degree in the discipline or allied fields.</td>
-            <td><a href="https://drive.google.com/file/d/1k01J2mc8w7zVOpCBxYGmszK6z_EJJsxZ/view?usp=sharing">TOR, Special Order for the Appointment/Designation of the Dean</a></td>
+            <td><a href="https://drive.google.com/file/d/1QGE3cuTReCCJYe-qZCTNyuOFzC6viY6R/view?usp=drive_link">TOR, Special Order for the Appointment/Designation of the Dean</a></td>
             <td>The Dean is academically qualified per CMO 15, s. of 2019.</td>
             <td>Complied</td>
             <td></td>
