--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         </tr>
         <tr>
             <td class="text-body">b.	has published works in refereed journals in one of the disciplines under the academic unit.</td>
-            <td><a href="https://drive.google.com/file/d/157OpZeVJvR0lkj3Uvd0Xv-QyJmfpa2TE/view?usp=sharing">Abstract of Research</a></td>
+            <td><a href="https://drive.google.com/file/d/1ZUlQU05UxG4Ojy3yJhTro1jig7J0S2nE/view?usp=drive_link">Abstract of Research</a></td>
             <td>The Dean has published her research articles in refereed journals.</td>
             <td>Complied</td>
             <td></td>
