--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
             <td class="text-body"><span class="haha">Section 8. A-1: For MA (Academic Track)</span><br>With at least 24 units of coursework and at least 6 units of Thesis <br><br><br><span class="haha">Section 8.A.2: For MA (Research Track)</span><br>With at least 36 units coursework-units wherein there is less coursework and more research activities <br> <br>All units to be taken is by coursework (no coursework) </td>
             <td><a href="https://drive.google.com/file/d/1k9u6ey4cCTRckBbTaqLsggurKggX0awP/view?usp=sharing">Curriculum Outline</a> <br><br><br><br><br><br> and <br><br><br><br><br><br> <a href="https://drive.google.com/file/d/128Gik9dshlDNMvSagieO33HbXDjvNzDG/view?usp=sharing">Course Description</a><br><br><br><br><br><br><br><br><a href="https://drive.google.com/file/d/1oyuSkjXd0arTnPubTx_wbGZpBYslB79E/view?usp=sharing">Sample Program of the Study</a></td>
             <td>Migrating into MAEd major in English, the new curriculum now has 6 units basic courses, 12 units major courses, 6 units cognate/elective courses, and 6 units thesis writing of which it has a total of 30 units for students to graduate from the program. <br><br><br><br><br>Each course description follows the COBEdized  format of stating the course content and it clearly describes the knowledge and skills students have to learn in order to address real-world English language teaching issues and problems related to English as a second/foreign language and as an international language. <br><br><br><br>Program of Study is part of advising and monitoring students’ progress in the degree they are taking.</td>
-            <td>Complied <br><br><br><br><br><br><br><br><br><br><br>Complied<br><br><br><br><br><br><br><br><br><br><br><br>Complied</td>
+            <td>Complied <br><br><br><br><br><br><br><br><br><br><br><br><br> Complied<br><br><br><br><br><br><br><br><br><br><br><br><br><br>Complied</td>
             <td></td>
-            <td>The new nomenclature of the curriculum follows the stipulation specified in Section 7-III of CMO 15, series of 2019. <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>The Program of Study ensures that students are well-advised and monitored to keep track of their academic progress. 
+            <td>The new nomenclature of the curriculum follows the stipulation specified in Section 7-III of CMO 15, series of 2019. <br><br><br><br><br><br><br><br><br><br><br>The Program of Study ensures that students are well-advised and monitored to keep track of their academic progress. 
             </td>
         </tr>
         <tr>
@@ -260,7 +260,7 @@
             <td class="text-body"><span>1.  </span><span class="haha">Research and Creative Office - </span>The HEI has an Office that develops and implements a working mechanism that facilitates the planning, management, conduct, and monitoring and evaluation of research and creative work across the different programs.</td>
             <td><a href="https://drive.google.com/file/d/1dZqCHjr8DnbjXSggUWplh58O02gHTlph/view?usp=sharing">Organizational Chart</a><br><br><br><a href="https://drive.google.com/file/d/1Bw_VVdKSbdQhc540iwgSJ0aIr898ywxM/view?usp=sharing">Pictures of RCW Office (with description)</a><br><br><br><br><a href="https://drive.google.com/file/d/1sZWXdD5uyWSQr8ZXSmTY5iHZ0V7PCL0c/view?usp=sharing">RCW Manual</a></td>
             <td>The Office of the university RIDE (Research, Innovation, Development, and Extension) exists to facilitate the planning, management, conduct, and monitoring and evaluation of research and creative work across the different programs offered by NORSU whose daily functions are guided by its RCW manual.</td>
-            <td>Compiled</td>
+            <td>Complied</td>
             <td></td>
             <td>The RIDE office offers assistance to graduate students who would conduct researches that allow them to pursue their interests, to learn something new, to hone their problem-solving skills and to challenge themselves in finding new ways.</td>
         </tr>
@@ -268,7 +268,7 @@
             <td class="text-body"><span>2.  </span><span class="haha">RCW Policies - </span>The HEI has policies and guidelines on benefits and incentives for faculty undertaking research or creative work, such as de-loading, research awards, and support for publications and other scholarly or creative works, among others. These policies should be reflected in the Graduate Program Manual of Operations (GPMO)</td>
             <td><a href="https://drive.google.com/file/d/1kSedngJf1ePY-xYPdPkU1PilJWNyZNHr/view?usp=drive_link">RCW Policies/Manual</a></td>
             <td>Anchored on the University Code, the Graduate Program Manual of Operations (GPMO) stipulates policies and guidelines regarding benefits and incentives faculty members get when undertaking research or creative work.</td>
-            <td>Compiled</td>
+            <td>Complied</td>
             <td></td>
             <td>Faculty members who have approved research or creative work are given the privilege of course deloading as a necessary support for them to actively engage in research/creative work. Additionally, the university allocates funding when faculty members travel for paper presentations as a form of research dissemination</td>
         </tr>
@@ -280,7 +280,7 @@
                 </td>
             <td><a href="https://drive.google.com/file/d/1oArwqkTP0LOVaHBK6aM874-LTyOK-veI/view?usp=sharing">RCW Agenda</a></td>
             <td>The NORSU Research and Extension Agenda clearly stipulates in its Vision and Mission to be the leading generators of knowledge, technology, and economic growth in accord with global standards.</td>
-            <td>Compiled</td>
+            <td>Complied</td>
             <td></td>
             <td>It is aligned with the Philippine Development Plan, CHED-NHERA, Administration’s 10-point economic agenda, and the national and regional agencies of the government like Departments of Agriculture, Environment and Natural Resources among others. Under Education, Arts and Science, linguistics, literature, communication, philosophy and culture are included in its research thrusts and priorities.</td>
         </tr>
@@ -288,7 +288,7 @@
             <td class="text-body"><span>4.  </span><span class="haha">Ethical Standards - </span>The HEI maintains ethical standards to be observed by faculty and students when they conduct research/thesis/dissertation involving human participation or animal subjects. The HEI may adopt ethical standards developed by the appropriate agencies such as DOST.</td>
             <td><a href="https://drive.google.com/file/d/1SH1MkHJpvPI7mltIrsjb2TnRJJvh73-q/view?usp=sharing">Policy on Ethical Standards</a><br><br><a href="https://drive.google.com/file/d/1SH1MkHJpvPI7mltIrsjb2TnRJJvh73-q/view?usp=sharing">RCW Policies/Manual</a></td>
             <td>The university adheres to the highest policies on ethical standards in the conduct of all its researches as their very norm promotes the aims of research, such as knowledge, truth, and avoidance of error. The said policies are found in the university’s Research Code of Ethics. </td>
-            <td>Compiled</td>
+            <td>Complied</td>
             <td></td>
             <td>It is the policy of the university that before a research study is conducted, the proponent(s) has to let his/her study undergo ethics of fact-checking.</td>
         </tr>
@@ -296,7 +296,7 @@
             <td class="text-body"><span>5.  </span><span class="haha">RCW Funding - </span>the HEI shall allocate a regular budget for RCW and the capacity to mobilize other sources of funding to support its similar undertakings. CHED shall define the threshold for the RCW budget for each discipline as recommended by Technical Panel.</td>
             <td><a href="https://drive.google.com/file/d/1-aHL1sx69FYky5jtp2ZJH2ayTDd9UXbd/view?usp=sharing">Policy on RCW Funding</a><br><br><a href="https://drive.google.com/file/d/1jsFpHgiC2DK2cuo4PYoketx5MgdqJRMN/view?usp=sharing">Latest Work and Financial Plan</a></td>
             <td>When it comes to the utilization of RCW funding, the university follows the required policies based on its financial plan to support reasonable expenses that advance faculty scholarships.</td>
-            <td>Compiled</td>
+            <td>Complied</td>
             <td></td>
             <td>The Office of the university RIDE under its Director for Research determines research proposals that merit research funding after undergoing research proposal presentation to be approved by the VP for RIDE and endorsed to the University President for his approval. </td>
         </tr>
@@ -305,7 +305,7 @@
                 </td>
             <td><a href="https://drive.google.com/file/d/1rVJHHRXBudP04HaQQk7NJAeZET4GNehD/view?usp=sharing">Policy on RCW Collaboration</a><br><br><a href="https://drive.google.com/file/d/1nWyGwn56x93A3R49u43VSkOgKViUGmBf/view?usp=sharing">MOA with Partner Institutions/Agencies</a></td>
             <td>Aiming to develop innovative solutions to existing problems, research undertakings at NORSU prioritize partnerships with other institutions within and outside the country.</td>
-            <td>Compiled</td>
+            <td>Complied</td>
             <td></td>
             <td>Under the research thrusts and initiatives of the university, it puts premium on strengthening linkages in order to establish local and foreign research universities and organizations with strong research experiences. This is to improve relevance and usefulness of the research, attain greater trust within communities where research is conducted, and to increase empowerment of those who partner in research.
                 </td>
@@ -314,9 +314,9 @@
             <td class="text-body"><span>7.  </span><span class="haha">Gradaute Program Manual of Operation (GPMO) - </span>the HEI has a system of rationalizing offerings of graduate programs in matters of curriculum, research and creative work, supervision and resource optimization to be included in a GPMO. The GPMO shall include policies on plagiarism, anti-sexual harassment, and research and teaching assistantship program, among others.</td>
             <td><a href="https://drive.google.com/file/d/1887ayI7q3j7IZPyavfb_JKNzPPfR8-SA/view?usp=sharing">Latest GPMO</a></td>
             <td>The Graduate Program Manual of Operations (GPMO) of the university is a work on progress which would greatly consider inclusion of describing curriculum offerings, research, creative work, supervision, and maximizing resources as well as inclusion of policies on plagiarism, safe spaces, etc. It is the faculty and student manuals that have been used to try satisfying this part of the assessment.  </td>
+            <td>Complied</td>
             <td></td>
             <td></td>
-            <td>Compiled</td>
         </tr>
         <tr>
             <td rowspan="1" class="text">V. PROGRAM REQUIREMENT</td>
@@ -520,11 +520,11 @@
                 The Graduate School has pool of experts serving as method specialists.<br><br><br>
                  This requirement is stipulated in the Student Manual of the Graduate School.<br><br><br>
                 </td>
-            <td>Complied<br><br><br>Complied<br><br><br>Complied<br><br><br>Complied</td>
+            <td>Complied<br><br><br><br><br>Complied<br><br><br><br><br><br><br>Complied<br><br><br><br><br>Complied</td>
             <td></td>
-            <td>Letter invitation to sit as panel members bear the expertise of each of the invitees by writing opposite his/her name his/her role as content specialist or method specialist.<br><br><br>
-                Selection is based on strong qualification.<br><br><br>
-                Students can choose which method specialists work best with their thesis studies.<br><br><br>
+            <td>Letter invitation to sit as panel members bear the expertise of each of the invitees by writing opposite his/her name his/her role as content specialist or method specialist.<br><br>
+                Selection is based on strong qualification.<br><br><br><br><br><br><br>
+                Students can choose which method specialists work best with their thesis studies.<br><br><br><br>
                 The Graduate School can choose to go beyond the required number if there is a need to do it.
                 </td>
         </tr>
