--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 d win refereed professional journal/s and/or have produced publicly recognized creative and/or technology outputs; or <br><br>
                 •	If there is a dearth in Doctoral degree holders, at least 1 (one) full-time faculty who has a doctoral degree in the discipline and with published works in professional journals and/or have produced publicly recognized creative and/or technology outputs; and at least 3 (three) full-time who are master’s degree holders, but with doctoral units in the discipline and have at least 1 (one) publication in a refereed journal. The faculty with master’s degree plus doctoral units can only teach in the Master’s program, but cannot serve as Thesis Advisers.
             </td>
-            <td><a href="https://drive.google.com/file/d/1hIW_bjGwTmMbYJtk-CcnuHEYti8DL8Ad/view?usp=sharing">Summary matrix of faculty</a></td>
+            <td><a href="https://drive.google.com/file/d/1hIW_bjGwTmMbYJtk-CcnuHEYti8DL8Ad/view?usp=sharing">Summary matrix of faculty</a> <br><br> <a href="https://drive.google.com/file/d/1zGnEaLelkXiaHB8RCfgIhnMpHsuVCo6m/view?usp=drive_link">Other supprting documents</a></td>
             <td>The given matrix has shown the strong faculty line up of the program.
 <br><br>
                 Faculty members get to be invited to teach in the Graduate School.
